src/app/app-route-home/app-route-home.component.css
.banner {
  max-width: 1200px;
  margin: 2em auto;
  padding: 0 1em;
}

.banner img {
  transform: rotate(-10deg);
  clip-path: polygon(60% 0, 60% 35%, 100% 35%, 100% 100%, 35% 100%, 35% 65%, 0 65%, 0 0);
}

.showcases {
  max-width: 900px;
  margin: 0 auto;
  padding: 1em;
}

